--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyApplication" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.AiCameraApplication" parent="android:Theme.Material.Light.NoActionBar" >
+        <!-- Customize your light theme here. -->
+        <item name="android:statusBarColor">@color/purple_500</item>
+    </style>
     <style name="Theme.MySplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/purple_500</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_round</item>
-        <item name="postSplashScreenTheme">@style/Theme.MyApplication</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/baseline_shopping_cart_24</item>
+        <item name="postSplashScreenTheme">@style/Theme.AiCameraApplication</item>
         <item name="windowSplashScreenAnimationDuration">10000</item>
+    </style>
+
+    <style name="Theme.AiCameraSplashScreen" parent="Theme.AiCameraApplication" />
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/purple_500</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/snapchatlogo</item>
+        <item name="postSplashScreenTheme">@style/Theme.AiCameraApplication</item>
     </style>
 </resources>
