--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/purple_500</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/snapchatlogo</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/cam_location</item>
         <item name="postSplashScreenTheme">@style/Theme.AiCameraApplication</item>
     </style>
 </resources>
