--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown_black">#333333</color>
+    <color name="red_demo">#ff0040</color>
+    <color name="white_border">#515151</color>
+    <color name="white_perment">#FFFFFFFF</color>
 </resources>
