--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="white_border">#515151</color>
     <color name="white_perment">#FFFFFFFF</color>
     <color name="circle_outer">#484848</color>
+    <color name="green_kelly_color">#4CBB17</color>
 </resources>
