--- a/app/src/main/res/layout/map_view.xml
+++ b/app/src/main/res/layout/map_view.xml
@@ -11,4 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="SPEED"
+        android:background="@drawable/rounded_text_background"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:padding="4dp"
+        android:layout_margin="20dp"
+        android:id="@+id/speed_txt"/>
+
 </RelativeLayout>
